Fixed logo sizing issue for mobile and mobile side z-index issue

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,9 +1,5 @@
 .vertical-spacer {
-    height: 100px;
-}
-.fixed-nav {
-    position: fixed;
-    z-index: 100;
+    height: 20px;
 }
 .margin-top-15 {
     margin: 15px;
@@ -13,4 +9,17 @@
 }
 .online-cancel {
     outline: none;
+}
+.hide-overflow {
+    overflow: hidden;
+}
+@media only screen and (max-width: 993px) {
+    #logo-image img {
+        height: 64px;
+    }
+}
+@media only screen and (max-width: 601px) {
+    #logo-image img {
+        height: 56px;
+    }
 }
